# ida-manager

./: .evaluation-completed  .gitignore  .mcp.json  CLAUDE.md  DANH-GIA-DU-AN.md  EVALUATION-SUMMARY.md  PROJECT-EVALUATION.md  README.md  pyproject.toml  todos.md
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  debugger.md  docs-writer.md  orchestrator.md  refactorer.md  security-auditor.md  test-architect.md
.claude/commands/: architect.md  mentor.md  rapid.md  review.md
.claude/hooks/: hooks.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  gui_task_checklist.md  known_issues_solutions.md  project_overview.md  recent_progress.md  suggested_commands.md  task_completion_checklist.md
docs/: README.md
docs/adr/: 000-use-sqlite.md  001-layered-architecture.md  002-result-objects.md  003-pydantic-for-validation.md
docs/architecture/: 00-overview.md  01-c4-model.md  02-data-model.md
resources/sql/: schema.sql
src/: __init__.py  main.py
src/config/: constants.py  settings.py
src/containers/: __init__.py  di_container.py
src/core/: ida_detector.py  installer.py  plugin_manager.py  version_manager.py
src/database/: db_manager.py  migrations.py  models.py
src/github/: client.py  release_fetcher.py  repo_parser.py
src/models/: github_info.py  plugin.py
src/repositories/: plugin_repository.py
tests/: test_config_and_models.py  test_database.py  test_db_manager_refactored.py  test_di_container.py  test_github_client_threadsafe.py  test_plugin_service.py  test_version_utils.py
(+36 files in other folders)
