[project]
name = "ida-plugin-manager"
version = "0.1.0"
description = "IDA Pro Plugin Manager - Manage plugins for IDA Pro disassembler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dearpygui>=1.1.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "gitpython>=3.1.0",
    "packaging>=23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
